Prepare for preduction

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CHS PE</title>
+        <title>CHS HPE</title>
     </head>
     <body>
         <div id="app"></div>
